--- a/package.json
+++ b/package.json
@@ -34,20 +34,20 @@
   },
   "homepage": "https://github.com/Foboss6/shop-backend#readme",
   "dependencies": {
-    "@nestjs/cli": "^9.2.0",
+    "@nestjs/apollo": "^10.2.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.2.0",
+    "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.11.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
+    "@nestjs/cli": "^9.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
@@ -65,7 +65,8 @@
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-morph": "^17.0.1",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4"
   },
