--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typings": "ts-node src/generate-typings.ts"
   },
   "repository": {
     "type": "git",
@@ -44,7 +45,8 @@
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ulidx": "^0.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
